# xeo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml  tox.ini
.github/scripts/: update_catalogue.py
.github/workflows/: deploy.yml  publish.yml  tests.yml  update_catalogue.yml  update_vitepress.yml
docs/: CHANGELOG.md  api.md  getting-started.md  index.md  publications.md  vitepress.py
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/notebooks/: 01_getting_started.ipynb  02_exploring_instruments.ipynb  03_spectral_bands.ipynb  04_spectral_response_functions.ipynb  05_raw_data_and_dataframe_workflows.ipynb  06_data_access.ipynb  07_advanced_search.ipynb  08_plotting.ipynb
docs/tutorials/: 01_getting_started.ipynb  01_getting_started.md  02_exploring_instruments.ipynb  02_exploring_instruments.md  03_spectral_bands.md  04_spectral_response_functions.md  05_raw_data_and_dataframe_workflows.ipynb  05_raw_data_and_dataframe_workflows.md  06_data_access.ipynb  06_data_access.md  07_advanced_search.md  08_plotting.md  index.md
earth_observation/: __init__.py  axioms.py  utils.py
earth_observation/data/: catalogue.json
tests/: test_plot.py  test_xeo.py
xeo/: __init__.py  axioms.py  plot.py  utils.py  xeo.py
