[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth-observation"
version = "2026.2.0"
description = "Awesome Earth Observation Instruments in Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "David Montero Loaiza", email = "dml.mont@gmail.com" }
]
requires-python = ">=3.10"

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.0.3",
]

[project.urls]
"Bug Tracker"= "https://github.com/awesome-spectral-indices/earth-observation/issues"
"Source Code" = "https://github.com/awesome-spectral-indices/earth-observation"
Homepage = "https://github.com/awesome-spectral-indices/earth-observation"

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
"earth-observation.data" = ["*.json"]