[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xeo"
version = "0.2.1"
description = "Awesome Earth Observation Instruments in Python"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "David Montero Loaiza", email = "dml.mont@gmail.com" }
]
requires-python = ">=3.10"

classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.0.3",
  "python-box>=6.0",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",
]

[project.urls]
"Bug Tracker" = "https://github.com/awesome-spectral-indices/xeo/issues"
"Source Code" = "https://github.com/awesome-spectral-indices/xeo"
Homepage = "https://github.com/awesome-spectral-indices/xeo"

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["xeo*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"xeo.data" = ["*.json"]

[tool.griffe2md]
docstring_style = "numpy"
